--- a/index.html
+++ b/index.html
@@ -14,12 +14,21 @@
                     <a href="/">
                         <img src="build/img/logo.svg" alt="Logotipo de Bienes Raices">
                     </a>
-                    <nav class="navegacion">
-                        <a href="nosotros.html">Nosotros</a>
-                        <a href="anuncios.html">Anuncios</a>
-                        <a href="blog.html">Blog</a>
-                        <a href="contacto.html">Contacto</a>
-                    </nav>
+
+                    <div class="mobile-menu">
+                        <img src="build/img/barras.svg" alt="icono menu responsive">
+                    </div>
+
+                    <div class="derecha">
+                        <img class="dark-mode-boton" src="build/img/dark-mode.svg">
+                        <nav class="navegacion">
+                            <a href="nosotros.html">Nosotros</a>
+                            <a href="anuncios.html">Anuncios</a>
+                            <a href="blog.html">Blog</a>
+                            <a href="contacto.html">Contacto</a>
+                        </nav>
+                    </div>
+                   
                 </div> <!--.barra-->
                 <h1>Venta de Casas y Departamentos Exclusivos de Lujo</h1>
         </div>
@@ -69,15 +78,15 @@
 
                     <ul class="iconos-caracteristicas"> 
                         <li>
-                            <img loading="lazy" src="build/img/icono_wc.svg" alt="icono wc">
+                            <img class="icono" loading="lazy" src="build/img/icono_wc.svg" alt="icono wc">
                             <p>3</p>
                         </li>
                         <li>
-                            <img loading="lazy" src="build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
+                            <img class="icono" loading="lazy" src="build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
                             <p>3</p>
                         </li>
                         <li>
-                            <img loading="lazy" src="build/img/icono_dormitorio.svg" alt="icono dormitorio">
+                            <img class="icono" loading="lazy" src="build/img/icono_dormitorio.svg" alt="icono dormitorio">
                             <p>4</p>
                         </li>
                     </ul>
@@ -101,15 +110,15 @@
 
                     <ul class="iconos-caracteristicas"> 
                         <li>
-                            <img loading="lazy" src="build/img/icono_wc.svg" alt="icono wc">
+                            <img class="icono" loading="lazy" src="build/img/icono_wc.svg" alt="icono wc">
                             <p>3</p>
                         </li>
                         <li>
-                            <img loading="lazy" src="build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
+                            <img class="icono" loading="lazy" src="build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
                             <p>3</p>
                         </li>
                         <li>
-                            <img loading="lazy" src="build/img/icono_dormitorio.svg" alt="icono dormitorio">
+                            <img class="icono" loading="lazy" src="build/img/icono_dormitorio.svg" alt="icono dormitorio">
                             <p>4</p>
                         </li>
                     </ul>
@@ -133,15 +142,15 @@
 
                     <ul class="iconos-caracteristicas"> 
                         <li>
-                            <img loading="lazy" src="build/img/icono_wc.svg" alt="icono wc">
+                            <img class="icono" loading="lazy" src="build/img/icono_wc.svg" alt="icono wc">
                             <p>3</p>
                         </li>
                         <li>
-                            <img loading="lazy" src="build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
+                            <img class="icono" loading="lazy" src="build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
                             <p>3</p>
                         </li>
                         <li>
-                            <img loading="lazy" src="build/img/icono_dormitorio.svg" alt="icono dormitorio">
+                            <img class="icono" loading="lazy" src="build/img/icono_dormitorio.svg" alt="icono dormitorio">
                             <p>4</p>
                         </li>
                     </ul>
